starting towards pbrt to obj converter

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,6 +30,7 @@ SET(LIBRARY_OUTPUT_PATH ${PLIB_BINARY_DIR})
 SET(EXECUTABLE_OUTPUT_PATH ${PLIB_BINARY_DIR})
 
 INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR})
+INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/embree-common)
 
 ADD_LIBRARY(plib_common
   embree-common/sys/filename.cpp
