added 'plymesh' shape to obj exporter; can now read vw van

--- a/pbrt/CMakeLists.txt
+++ b/pbrt/CMakeLists.txt
@@ -2,6 +2,8 @@
 ADD_LIBRARY(plib_pbrt
   Parser.cpp
   Scene.cpp
+  parsePLY.cpp
+  ../3rdParty/ply.cpp
   )
 TARGET_LINK_LIBRARIES(plib_pbrt plib_common)
 
