--- a/apps/CMakeLists.txt
+++ b/apps/CMakeLists.txt
@@ -1,5 +1,5 @@
-ADD_EXECUTABLE(pbrt2osp pbrt2osp.cpp)
-TARGET_LINK_LIBRARIES(pbrt2osp plib_pbrt)
+ADD_EXECUTABLE(pbrt2rivl pbrt2rivl.cpp)
+TARGET_LINK_LIBRARIES(pbrt2rivl plib_pbrt)
 
 ADD_EXECUTABLE(pbrt2obj pbrt2obj.cpp)
 TARGET_LINK_LIBRARIES(pbrt2obj plib_pbrt)
