--- a/apps/CMakeLists.txt
+++ b/apps/CMakeLists.txt
@@ -1,5 +1,21 @@
+## ======================================================================== ##
+## Copyright 2009-2017 Ingo Wald                                            ##
+##                                                                          ##
+## Licensed under the Apache License, Version 2.0 (the "License");          ##
+## you may not use this file except in compliance with the License.         ##
+## You may obtain a copy of the License at                                  ##
+##                                                                          ##
+##     http://www.apache.org/licenses/LICENSE-2.0                           ##
+##                                                                          ##
+## Unless required by applicable law or agreed to in writing, software      ##
+## distributed under the License is distributed on an "AS IS" BASIS,        ##
+## WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. ##
+## See the License for the specific language governing permissions and      ##
+## limitations under the License.                                           ##
+## ======================================================================== ##
+
 ADD_EXECUTABLE(pbrt2rivl pbrt2rivl.cpp)
-TARGET_LINK_LIBRARIES(pbrt2rivl plib_pbrt)
+TARGET_LINK_LIBRARIES(pbrt2rivl pbrt_parser)
 
 ADD_EXECUTABLE(pbrt2obj pbrt2obj.cpp)
-TARGET_LINK_LIBRARIES(pbrt2obj plib_pbrt)
+TARGET_LINK_LIBRARIES(pbrt2obj pbrt_parser)
