--- a/pbrt/CMakeLists.txt
+++ b/pbrt/CMakeLists.txt
@@ -21,5 +21,5 @@ ADD_LIBRARY(pbrt_parser
   parsePLY.cpp
   ../3rdParty/ply.cpp
   )
-TARGET_LINK_LIBRARIES(pbrt_parser ospray_common)
+TARGET_LINK_LIBRARIES(pbrt_parser ospcommon)
 
