--- a/ospcommon/CMakeLists.txt
+++ b/ospcommon/CMakeLists.txt
@@ -14,37 +14,38 @@
 ## limitations under the License.                                           ##
 ## ======================================================================== ##
 
-SET(CMAKE_THREAD_PREFER_PTHREAD TRUE)
-SET(THREADS_PREFER_PTHREAD_FLAG TRUE)
-FIND_PACKAGE(Threads REQUIRED)
-SET(LINK_LIBS ${CMAKE_THREAD_LIBS_INIT} ${CMAKE_DL_LIBS})
+IF (NOT (TARGET ospray_common))
+  SET(CMAKE_THREAD_PREFER_PTHREAD TRUE)
+  SET(THREADS_PREFER_PTHREAD_FLAG TRUE)
+  FIND_PACKAGE(Threads REQUIRED)
+  SET(LINK_LIBS ${CMAKE_THREAD_LIBS_INIT} ${CMAKE_DL_LIBS})
+  
+  IF (WIN32)
+    LIST(APPEND LINK_LIBS ws2_32)
+  ENDIF()
+  
+  ADD_LIBRARY(ospray_common SHARED
+    common.cpp
+    FileName.cpp
+    sysinfo.cpp
+    malloc.cpp
+    library.cpp
+    thread.cpp
+    vec.cpp
+    array3D/Array3D.cpp
 
-IF (WIN32)
-  LIST(APPEND LINK_LIBS ws2_32)
+    AffineSpace.h
+    box.h
+    constants.h
+    intrinsics.h
+    LinearSpace.h
+    math.h
+    platform.h
+    Quaternion.h
+    RefCount.h
+    vec.h
+    )
+  TARGET_LINK_LIBRARIES(
+    ospray_common ${LINK_LIBS}
+    )
 ENDIF()
-
-ADD_LIBRARY(ospcommon SHARED
-  common.cpp
-  FileName.cpp
-  sysinfo.cpp
-  malloc.cpp
-  library.cpp
-  thread.cpp
-  vec.cpp
-  array3D/Array3D.cpp
-
-  AffineSpace.h
-  box.h
-  constants.h
-  intrinsics.h
-  LinearSpace.h
-  math.h
-  platform.h
-  Quaternion.h
-  RefCount.h
-  vec.h
-  )
-TARGET_LINK_LIBRARIES(
-  ospcommon ${LINK_LIBS}
-  )
-
