--- a/apps/CMakeLists.txt
+++ b/apps/CMakeLists.txt
@@ -19,3 +19,5 @@ TARGET_LINK_LIBRARIES(pbrt2rivl pbrt_parser)
 
 ADD_EXECUTABLE(pbrt2obj pbrt2obj.cpp)
 TARGET_LINK_LIBRARIES(pbrt2obj pbrt_parser)
+
+ADD_SUBDIRECTORY(biff)
