removing biff - making this parser only

--- a/apps/CMakeLists.txt
+++ b/apps/CMakeLists.txt
@@ -20,4 +20,4 @@ TARGET_LINK_LIBRARIES(pbrt2rivl pbrt_parser)
 ADD_EXECUTABLE(pbrt2obj pbrt2obj.cpp)
 TARGET_LINK_LIBRARIES(pbrt2obj pbrt_parser)
 
-ADD_SUBDIRECTORY(biff)
+#ADD_SUBDIRECTORY(biff)
