axed pbrt.h, axed use of ospcommon::FileName

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,13 +26,14 @@ IF(COMMAND cmake_policy)
 ENDIF(COMMAND cmake_policy)
 
 SET(CMAKE_CXX_STANDARD 11)
-SET(PLIB_BINARY_DIR ${PROJECT_BINARY_DIR})
-SET(LIBRARY_OUTPUT_PATH ${PLIB_BINARY_DIR})
-SET(EXECUTABLE_OUTPUT_PATH ${PLIB_BINARY_DIR})
 
 INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR})
 
 ADD_SUBDIRECTORY(ospcommon)
+
+set(pbrt-parser_VERSION_MAJOR 0)
+set(pbrt-parser_VERSION_MINOR 1)
+set(pbrt-parser_VERSION_PATCH 0)
 
 ADD_SUBDIRECTORY(pbrt)
 ADD_SUBDIRECTORY(apps)
