--- a/apps/CMakeLists.txt
+++ b/apps/CMakeLists.txt
@@ -17,8 +17,8 @@
 ADD_EXECUTABLE(pbrtlint pbrtlint.cpp)
 TARGET_LINK_LIBRARIES(pbrtlint pbrt_parser)
 
-ADD_EXECUTABLE(pbrt2rivl pbrt2rivl.cpp)
-TARGET_LINK_LIBRARIES(pbrt2rivl pbrt_parser)
+#ADD_EXECUTABLE(pbrt2rivl pbrt2rivl.cpp)
+#TARGET_LINK_LIBRARIES(pbrt2rivl pbrt_parser)
 
-ADD_EXECUTABLE(pbrt2obj pbrt2obj.cpp)
-TARGET_LINK_LIBRARIES(pbrt2obj pbrt_parser)
+#ADD_EXECUTABLE(pbrt2obj pbrt2obj.cpp)
+#TARGET_LINK_LIBRARIES(pbrt2obj pbrt_parser)
