remvoed 'basepath' stuff from apps (handling internally now), and axed all ospcommon::affine3f references from public Scene.h file

--- a/apps/CMakeLists.txt
+++ b/apps/CMakeLists.txt
@@ -17,5 +17,5 @@
 ADD_EXECUTABLE(pbrtlint pbrtlint.cpp)
 TARGET_LINK_LIBRARIES(pbrtlint pbrt_parser)
 
-#ADD_EXECUTABLE(pbrt2obj pbrt2obj.cpp)
-#TARGET_LINK_LIBRARIES(pbrt2obj pbrt_parser)
+ADD_EXECUTABLE(pbrt2obj pbrt2obj.cpp)
+TARGET_LINK_LIBRARIES(pbrt2obj pbrt_parser)
