--- a/apps/CMakeLists.txt
+++ b/apps/CMakeLists.txt
@@ -17,6 +17,9 @@
 ADD_EXECUTABLE(pbrtlint pbrtlint.cpp)
 TARGET_LINK_LIBRARIES(pbrtlint pbrt_parser)
 
+ADD_EXECUTABLE(pbrtinfo pbrtinfo.cpp)
+TARGET_LINK_LIBRARIES(pbrtinfo pbrt_parser)
+
 ADD_EXECUTABLE(pbrt2obj pbrt2obj.cpp)
 TARGET_LINK_LIBRARIES(pbrt2obj pbrt_parser)
 
