--- a/apps/CMakeLists.txt
+++ b/apps/CMakeLists.txt
@@ -14,14 +14,12 @@
 ## limitations under the License.                                           ##
 ## ======================================================================== ##
 
-ADD_EXECUTABLE(pbrtlint pbrtlint.cpp)
-TARGET_LINK_LIBRARIES(pbrtlint pbrtParser_syntax)
-
 ADD_EXECUTABLE(pbrtinfo pbrtinfo.cpp)
 TARGET_LINK_LIBRARIES(pbrtinfo pbrtParser_syntax)
 
 ADD_EXECUTABLE(pbrt2obj pbrt2obj.cpp)
 TARGET_LINK_LIBRARIES(pbrt2obj pbrtParser_syntax)
 
-ADD_EXECUTABLE(pbrt2pbff pbrt2pbff.cpp)
-TARGET_LINK_LIBRARIES(pbrt2pbff pbrtParser_syntax)
+# '.pbrt' to '.pbsf' (pbrt binary syntax file) converter
+ADD_EXECUTABLE(pbrt2pbsf pbrt2pbsf.cpp)
+TARGET_LINK_LIBRARIES(pbrt2pbsf pbrtParser_syntax)
