--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,12 +30,13 @@ SET(CMAKE_CXX_STANDARD 11)
 option(EXP_RIB_IMPORTER "Build experimental rib importer?" OFF)
 
 INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR})
+INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/internal/)
 
 set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
 set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
 
-ADD_SUBDIRECTORY(ospcommon)
+ADD_SUBDIRECTORY(internal/ospcommon EXCLUDE_FROM_ALL)
 
 set(pbrt-parser_VERSION_MAJOR 1)
 set(pbrt-parser_VERSION_MINOR 0)
