compiles with -Wall, and has 'curve' support

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -44,7 +44,8 @@ if(COMMAND cmake_policy)
 endif(COMMAND cmake_policy)
 
 set(CMAKE_CXX_STANDARD 11)
-
+set(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} -Wall)
+  
 option(EXP_RIB_IMPORTER "Build experimental rib importer?" OFF)
 
 include_directories(${PROJECT_SOURCE_DIR})
