gitlab ci install cmake

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,6 +6,7 @@ build-linux-gcc-release:
   script:
     - mkdir build-gcc-release
     - cd build-gcc-release
+    - sudo apt -y install cmake
     - export CXX=g++
     - cmake -DCMAKE_BUILD_TYPE=Release ..
     - make
@@ -15,6 +16,7 @@ build-linux-gcc-debug:
   script:
     - mkdir build-gcc-release
     - cd build-gcc-release
+    - sudo apt -y install cmake
     - export CXX=g++
     - cmake -DCMAKE_BUILD_TYPE=Debug ..
     - make
@@ -25,6 +27,7 @@ build-linux-clang-release:
   script:
     - mkdir build-clang-release
     - cd build-clang-release
+    - sudo apt -y install cmake
     - export CXX=clang++
     - cmake -DCMAKE_BUILD_TYPE=Release ..
     - make
@@ -34,6 +37,7 @@ build-linux-clang-debug:
   script:
     - mkdir build-clang-release
     - cd build-clang-release
+    - sudo apt -y install cmake
     - export CXX=clang++
     - cmake -DCMAKE_BUILD_TYPE=Debug ..
     - make
