gitlab ci install cmake

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,7 +6,7 @@ build-linux-gcc-release:
   script:
     - mkdir build-gcc-release
     - cd build-gcc-release
-    - sudo apt -y install cmake
+    - apt -y install cmake
     - export CXX=g++
     - cmake -DCMAKE_BUILD_TYPE=Release ..
     - make
@@ -16,7 +16,7 @@ build-linux-gcc-debug:
   script:
     - mkdir build-gcc-release
     - cd build-gcc-release
-    - sudo apt -y install cmake
+    - apt -y install cmake
     - export CXX=g++
     - cmake -DCMAKE_BUILD_TYPE=Debug ..
     - make
@@ -27,7 +27,7 @@ build-linux-clang-release:
   script:
     - mkdir build-clang-release
     - cd build-clang-release
-    - sudo apt -y install cmake
+    - apt -y install cmake
     - export CXX=clang++
     - cmake -DCMAKE_BUILD_TYPE=Release ..
     - make
@@ -37,7 +37,7 @@ build-linux-clang-debug:
   script:
     - mkdir build-clang-release
     - cd build-clang-release
-    - sudo apt -y install cmake
+    - apt -y install cmake
     - export CXX=clang++
     - cmake -DCMAKE_BUILD_TYPE=Debug ..
     - make
