naming clang CI targets as 'clang' rather than 'gcc' ...

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -64,7 +64,7 @@ ubuntu18-gcc-debug:
     - cmake -DCMAKE_BUILD_TYPE=Debug ..
     - make
 
-ubuntu18-gcc-release:
+ubuntu18-clang-release:
   stage: build
   tags:
     - docker
@@ -74,12 +74,11 @@ ubuntu18-gcc-release:
     - apt -y install cmake clang-6.0
     - mkdir build
     - cd build
-    - export CC=clang
     - export CXX=clang++
     - cmake -DCMAKE_BUILD_TYPE=Release ..
     - make
 
-ubuntu18-gcc-debug:
+ubuntu18-clang-debug:
   stage: build
   tags:
     - docker
@@ -89,7 +88,6 @@ ubuntu18-gcc-debug:
     - apt -y install cmake clang-6.0
     - mkdir build
     - cd build
-    - export CC=clang
     - export CXX=clang++
     - cmake -DCMAKE_BUILD_TYPE=Debug ..
     - make
