Switched to internal math library.

--- a/pbrtParser/semantic/CMakeLists.txt
+++ b/pbrtParser/semantic/CMakeLists.txt
@@ -15,6 +15,7 @@
 ## ======================================================================== ##
 
 set(SOURCES
+  Scene.h
   Scene.cpp
   BinaryFileFormat.cpp
   importPBRT.cpp
