--- a/pbrtParser/syntactic/CMakeLists.txt
+++ b/pbrtParser/syntactic/CMakeLists.txt
@@ -15,9 +15,14 @@
 ## ======================================================================== ##
 
 set(SOURCES
+  Math.h
+  Lexer.h
   Lexer.cpp
+  Parser.h
   Parser.cpp
+  Scene.h
   Scene.cpp
+  BinaryIO.h
   BinaryIO.cpp
   parsePLY.cpp
   ../../3rdParty/ply.cpp
