--- a/apps/CMakeLists.txt
+++ b/apps/CMakeLists.txt
@@ -15,18 +15,22 @@
 ## ======================================================================== ##
 
 ADD_EXECUTABLE(pbrt2obj pbrt2obj.cpp)
-TARGET_LINK_LIBRARIES(pbrt2obj pbrtParser_semantic)
-
-# '.pbrt' to '.pbsf' (pbrt binary syntactic file) converter
-#ADD_EXECUTABLE(pbrt2pbsf pbrt2pbsf.cpp)
-#TARGET_LINK_LIBRARIES(pbrt2pbsf pbrtParser_syntactic)
+TARGET_LINK_LIBRARIES(pbrt2obj pbrtParser)
 
 # '.pbrt' to '.pbf' (pbrt binary format) converter
 ADD_EXECUTABLE(pbrt2pbf pbrt2pbf.cpp)
-TARGET_LINK_LIBRARIES(pbrt2pbf pbrtParser_semantic)
+TARGET_LINK_LIBRARIES(pbrt2pbf pbrtParser)
 
+# simple example of loading a pbrt or pbf file, finding all triangle
+# meshes, and dumping all triangles in obj format. Note this is a
+# intentionally simplisitic example that lacks support for many things
+# (including, among other, vertex normals, texture coordinates,
+# materials, textures, etc) - it ONLY dumps triangles, nothing
+# else. Also be warned: since OBJ doesn't support instancing this can
+# produce preeeeetty big output files for heavily instanced scenes
+# (ie, do not try this on landscape, ecosys, or moana ...)
 ADD_EXECUTABLE(pbrtInfo pbrtInfo.cpp)
-TARGET_LINK_LIBRARIES(pbrtInfo pbrtParser_semantic)
+TARGET_LINK_LIBRARIES(pbrtInfo pbrtParser)
 
 install(TARGETS pbrtInfo DESTINATION bin)
 install(TARGETS pbrt2pbf DESTINATION bin)
